# backend

./: .dockerignore  .gitignore  pyproject.toml  readme.md
docker/: Dockerfile  Dockerfile.prod  boot.sh  compose.yml
src/: config.py  main.py  models.py  schemas.py  tasks.py
src/migrations/core/: 0_20211201020716_init.sql  1_20211202010413_update.sql  2_20211203023416_update.sql  3_20211203131215_update.sql
src/routers/: deps.py  devices.py  events.py  predict.py  users.py
